[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws_cron_expression_validator"
version = "1.1.10"
authors = [
  { name="Graham Coster", email="bitjugglers@gmail.com" },
]
description = "ValidatesAWS EventBridge cron expressions, which are similar to, but not compatible with Unix style cron expressions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable", # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/grumBit/aws_cron_expression_validator.git"
"Bug Tracker" = "https://github.com/grumBit/aws_cron_expression_validator/issues"
"Source" = "https://github.com/grumBit/aws_cron_expression_validator"
"Security Policy" = "https://github.com/grumbit/aws_cron_expression_validator/blob/master/.github/SECURITY.md"
"Release Notes" = "https://github.com/grumBit/aws_cron_expression_validator/blob/master/RELEASENOTES.md"

[tool.pytest.ini_options]
addopts = "--cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.coverage.run]
source = ["src"]

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
]
